<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickClose"
    tools:context=".SignInUpAct">

    <ImageView
        android:id="@+id/imAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/andrey" />

    <Button
        android:id="@+id/bAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickAvatar"
        android:text="@string/avatar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintStart_toStartOf="@+id/edLogin"
        app:layout_constraintTop_toBottomOf="@+id/imAvatar" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imAvatar"
        app:layout_constraintStart_toStartOf="@+id/imAvatar"
        app:layout_constraintTop_toBottomOf="@+id/bAvatar" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edLogin"
        app:layout_constraintTop_toBottomOf="@+id/edLogin" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edsurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edsurname"
        app:layout_constraintStart_toStartOf="@+id/edsurname"
        app:layout_constraintTop_toBottomOf="@+id/edsurname" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickDone"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/edMiddleName"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edMiddleName" />
</androidx.constraintlayout.widget.ConstraintLayout>